# TEP

Lista1/: CMakeLists.txt  CTable.cpp  CTable.h  Constants.h  Functionalities.cpp  Functionalities.h  Main.cpp  Zadanie1-2-3.cpp  Zadanie1-2-3.h
Lista2/: CMakeLists.txt  CNumber.cpp  CNumber.h  constants.cpp  constants.h  functionalities.cpp  functionalities.h  main.cpp
Lista3/: CMakeLists.txt  CTree.cpp  CTree.h  CTree.tpp  UI.cpp  UI.h  UI.tpp  constants.h  functionalities.cpp  functionalities.h  main.cpp
kupadupa/: CMakeLists.txt  main.cpp  main.h
